# nrf52840-webserver

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  linker.ld  toolchain-arm-none-eabi.cmake
config/: FreeRTOSConfig.h
include/: FreeRTOSConfig.h  board.h  logger.h  memutils.h  net.h
include/drivers/: spi.h  uarte.h
include/modules/: net.h
platform/nrf52840/: nrf_common.ld
src/: freertos_hooks.c  logger.c  main.c  memutils.c  net.c  startup.s  w5500_port.c
src/drivers/: spi.c  uarte.c
src/modules/: logger.c  net.c
src/ports/: w5500_port.c
